server/public/layout.css
.col {
  width: 100%;
}

html,
body {
  height: 100%;
}

.row {
  display: flex;
  flex-direction: flex;
}

.row.view-script {
  width: 100%;
}

.column.side-bar {
  height: auto;
}

.column.picture {
  margin-right: 60px;
}

.column.form {
  float: left;
  width: 691px;
}

div.side-bar.open,
div.text-container-side-bar.open,
div.sidenav.open {
  transform: translateX(0);
  transition: transform 1.3s ease;
  flex: 1 1 200px;
  z-index: 1;
}

th,
td,
.flex-container {
  padding: 0.8rem 0 0.8rem 2.5rem;
}

/* span.prompt {
  margin-left: 2.5rem;
} */

td {
  text-align: center;
}

td:nth-child(3n + 1) {
  text-align: left;
}

div.side-bar.closed,
div.side-bar.closed-open-first-time,
div.text-container-side-bar.closed,
div.text-container-side-bar.closed-open-first-time,
div.sidenav.closed,
div.sidenav.closed.closed-open-first-time {
  transform: translateX(-120%);
  transition: transform 1s ease;
  z-index: 2;
}

.row:first-of-type {
  overflow: hidden;
  flex-direction: row;
}

.column.component-container {
  width: 100%;
}

span.special-text.view-script {
  flex: 0 0 100%;
}

span.special-text {
  margin-bottom: 0.5rem;
}

/* Rounded Corners */
.rounded-corners,
button,
input,
textarea,
select {
  border-radius: 0.25rem;
}

tr:last-of-type > td:first-of-type {
  border-radius: 0 0 0 0.25rem;
}

tr:last-of-type > td:last-of-type {
  border-radius: 0 0 0.25rem 0;
}

/* Alignment */

.align-right {
  text-align: right;
  float: right;
}

.align-left,
span.prompt,
p.prompt {
  text-align: left;
  float: left;
}

label {
  margin: 0 1rem 1rem 0;
  white-space: nowrap;
}

form {
  margin: 1rem;
  font-family: 'Montserrat', sans-serif;
  padding: 0.8rem 0.8rem 1.5rem 0.8rem;
}

.form-container,
.table-container {
  flex-basis: 100%;
  padding: 0.4rem;
}

.view-script-component > .view-script .lg.flex-container {
  border-radius: 0.25rem;
}

.form-container {
  contain: content;
}

.create-email .row:nth-child(2) {
  margin-top: 1rem;
}

input,
select,
textarea {
  display: block;
  margin: 0 0 2rem 0;
  width: fill-available;
  flex-basis: 100%;
}

input {
  text-indent: 0.5rem;
}

textarea {
  text-indent: 1.2rem;
}

div.email-input-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.component-container .left-arrow,
.component-container .fa-mailbox {
  position: absolute;
  display: inline;
  line-height: 75px;
  white-space: nowrap;
}

button {
  position: relative;
  padding: 0.3rem 0.7rem;
  overflow: hidden;
}

button.create-email,
div.flights > div.align-right > button {
  margin-top: 3rem;
}

label.email-label {
  margin-right: 2.5rem;
}

label.phone-label {
  margin-right: 1.7rem;
}

label.company-label {
  margin-right: 1.1rem;
}

table {
  border-collapse: collapse;
  flex-basis: 100%;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
}

.blank-element {
  margin-top: 1rem;
}

.input-row {
  display: flex;
  flex-direction: column;
}

.row.parent {
  display: flex;
}

.side-bar {
  position: fixed;
  flex-direction: column;
  min-height: 100vh;
  height: 100%;
  white-space: nowrap;
  left: 0;
  top: 0;
  z-index: 1;
}

a,
h4 {
  z-index: 1;
  position: relative;
}

h4 {
  margin-top: 2.5rem;
}

.text-container-side-bar {
  position: relative;
  margin-right: 6rem;
  margin-left: 0.9rem;
  z-index: 1;
}

.sendon-row {
  margin-left: 0.5rem;
}

@media screen and (max-width: 768px), screen and (max-width: 1024px) and (orientation: landscape) {
  .column.picture {
    display: none;
  }

  .side-bar {
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    height: 100vh;
    padding: 1rem 2rem 0 0;
  }

  .row:first-of-type {
    flex-direction: column;
  }

  .component-container.open,
  .component-container.closed,
  .component-container.closed-open-first-time {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    overflow: none;
    padding: 1rem 1rem 0 1rem;
  }

  .flights,
  .contacts,
  .scripts,
  .view-script {
    display: flex;
    flex-direction: column;
    width: inherit;
  }

  .component-container,
  th,
  td,
  .flex-container {
    padding: 0.5rem;
  }

  table tbody tr > td span.table-text {
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  table#contact-list tbody tr > td span.table-text {
    display: inline;
    white-space: nowrap;
    width: 100px;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

@media screen and (orientation: landscape) and (max-width: 1000px) {
  .component-container.open,
  .component-container.closed,
  .component-container.closed-open-first-time {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    overflow: none;
    padding: 1rem 1rem 0 4.5rem;
  }
}

